--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -2,6 +2,7 @@
   font-family: "Sevillana", cursive;
   font-weight: 400;
   font-style: normal;
+  color: white;
 }
 
 main {
@@ -11,18 +12,20 @@ main {
   background-color: #1d1b5a;
   background-size: contain;
   background-position: center;
+}
 
+section {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 p {
   @include fonte();
   font-size: 3rem;
-  color: white;
-  margin: 2% 0;
+  
 }
 
 img {
@@ -32,4 +35,10 @@ img {
 
 button {
   @include fonte();
+
+  font-size: 2rem;
+  padding: 0.5% 5%;
+  background: #007BFF;
+  border-radius: 50px;
+  border-style: none;
 }
